tests/suite/snapshots/suite__parse__tests__parse__bad_procedure.xi.snap
---
source: tests/suite/parse.rs
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/bad_procedure.xi:2:5]
   │
 2 │     return
   ·     ───┬──  
   ·        ╰──── Unexpected token
───╯

