tests/suite/snapshots/suite__parse__tests__parse__bad_program.xi.snap
---
source: tests/suite/parse.rs
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/bad_program.xi:1:5]
   │
 1 │ What
   ·     ┬  
   ·     ╰── Unexpected EOF
───╯

