tests/suite/snapshots/suite__parse__tests__parse__block02-2.xi.snap
---
source: tests/suite/parse.rs
assertion_line: 36
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/block02-2.xi:3:4]
   │
 3 │   x:int
   ·    ┬  
   ·    ╰── Unexpected token
───╯

