tests/suite/snapshots/suite__parse__tests__parse__codedecl03-1.xi.snap
---
source: tests/suite/parse.rs
assertion_line: 22
expression: Snapshot(program)
---
(()
((f1 () () ())
    (f2 () (int) ((return 0)))
    (f3 () () ())
    (f4 () (bool) ((return true)))
    (f5 () (bool) ((return false)))
    (f6 () () ())))
