tests/suite/snapshots/suite__parse__tests__parse__codedecl04_1.xi.snap
---
source: tests/suite/parse.rs
expression: Snapshot(program)
---
(() ((f1 ((x int)) () ()) (f2 ((x int)) (int) ((return 0)))))
